About spacing fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -198,7 +198,7 @@ nav a:hover {
      max-width: 750px;
     margin: 0 auto;
     text-align: center;
-     padding: 40px 25px 80px 25px;
+    padding: 40px 25px 40px 25px;
     background: white;
     border-radius: 12px;
     box-shadow: 0 2px 6px rgba(0,0,0,0.1);
@@ -207,9 +207,11 @@ nav a:hover {
 .about p {
     line-height: 1.6;
     margin-top: 15px;
-    max-width: 650px;
-    margin: 0 auto 18px auto;
     font-size: 1.03rem;
+    margin-bottom: 16px;
+    max-width: 650px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 
@@ -439,7 +441,7 @@ pre {
     height: auto;
     border-radius: 10px;
     display: block;
-    margin: 10px auto 25px auto;
+    margin: 10px auto 35px auto;
     box-shadow: 0 3px 8px rgba(0, 0, 0, 0.08);
     border: none;
 }
